[gd_scene load_steps=20 format=3 uid="uid://b7aksdp08yvfq"]

[ext_resource type="Script" uid="uid://bvuk7oigqojgg" path="res://player.gd" id="1_n7ghd"]
[ext_resource type="Texture2D" uid="uid://dv3s0stiu555d" path="res://sprite/player/player_hit.png" id="2_606se"]
[ext_resource type="Texture2D" uid="uid://dfu0v087aai3k" path="res://sprite/player/player_idle1.png" id="3_urp6f"]
[ext_resource type="Texture2D" uid="uid://cejapmckq4kkd" path="res://sprite/player/player_idle2.png" id="4_bwjto"]
[ext_resource type="Texture2D" uid="uid://cos5tvo7n3euh" path="res://sprite/player/player_idle3.png" id="5_606se"]
[ext_resource type="Texture2D" uid="uid://c2sgrk106mjyk" path="res://sprite/player/player_idle4.png" id="6_u1c27"]
[ext_resource type="Texture2D" uid="uid://bqsd5rduij844" path="res://sprite/player/player_idle5.png" id="7_op7ga"]
[ext_resource type="Texture2D" uid="uid://cgoeed273567l" path="res://sprite/player/player_idle6.png" id="8_q13i1"]
[ext_resource type="Texture2D" uid="uid://b0to2c2pivikl" path="res://sprite/player/player_run1.png" id="9_urp6f"]
[ext_resource type="Texture2D" uid="uid://dplgs2spsd5i0" path="res://sprite/player/player_run2.png" id="10_bwjto"]
[ext_resource type="Texture2D" uid="uid://bha5m63owokwg" path="res://sprite/player/player_run3.png" id="11_606se"]
[ext_resource type="Texture2D" uid="uid://2pk70xakp62p" path="res://sprite/level/circle.png" id="11_nvl01"]
[ext_resource type="Texture2D" uid="uid://b2joygqcwtk3f" path="res://sprite/player/player_run4.png" id="12_u1c27"]
[ext_resource type="Texture2D" uid="uid://d302vtl56mgqd" path="res://sprite/player/player_run5.png" id="13_606se"]
[ext_resource type="Texture2D" uid="uid://1gi27sdylvfl" path="res://sprite/player/player_run6.png" id="14_u1c27"]
[ext_resource type="FontFile" uid="uid://i851wlx2hx6t" path="res://thin_pixel-7.ttf" id="16_u1c27"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q13i1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_606se")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_urp6f")
}, {
"duration": 1.0,
"texture": ExtResource("4_bwjto")
}, {
"duration": 1.0,
"texture": ExtResource("5_606se")
}, {
"duration": 1.0,
"texture": ExtResource("6_u1c27")
}, {
"duration": 1.0,
"texture": ExtResource("7_op7ga")
}, {
"duration": 1.0,
"texture": ExtResource("8_q13i1")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_urp6f")
}, {
"duration": 1.0,
"texture": ExtResource("10_bwjto")
}, {
"duration": 1.0,
"texture": ExtResource("11_606se")
}, {
"duration": 1.0,
"texture": ExtResource("12_u1c27")
}, {
"duration": 1.0,
"texture": ExtResource("13_606se")
}, {
"duration": 1.0,
"texture": ExtResource("14_u1c27")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pylmc"]
radius = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_op7ga"]
font = ExtResource("16_u1c27")
font_size = 20
font_color = Color(18.892157, 18.892157, 18.892157, 1)

[node name="Player" type="CharacterBody2D" groups=["players"]]
script = ExtResource("1_n7ghd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.9999995, -7.5)
sprite_frames = SubResource("SpriteFrames_q13i1")
animation = &"run"
autoplay = "run"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_pylmc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(7, 7)
limit_enabled = false
position_smoothing_enabled = true
position_smoothing_speed = 8.775
rotation_smoothing_enabled = true
rotation_smoothing_speed = 5.71
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.4
blend_mode = 2
shadow_enabled = true
texture = ExtResource("11_nvl01")

[node name="Timer_dead" type="Timer" parent="." groups=["players"]]
wait_time = 0.115

[node name="Label" type="Label" parent="."]
offset_left = -58.0
offset_top = -36.0
offset_right = 62.0
offset_bottom = -16.0
text = "Время: 0"
label_settings = SubResource("LabelSettings_op7ga")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = -58.0
offset_top = -22.0
offset_right = 62.0
offset_bottom = -2.0
text = "Смертей: 0"
label_settings = SubResource("LabelSettings_op7ga")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
offset_left = -57.0
offset_top = -8.0
offset_right = 63.0
offset_bottom = 12.0
text = "Дальше \"ESC\""
label_settings = SubResource("LabelSettings_op7ga")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer_dead" to="." method="_on_timer_dead_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
